Dropdown clipping fix

--- a/css/components/_main-banner.scss
+++ b/css/components/_main-banner.scss
@@ -13,14 +13,7 @@ header#header__landing-header {
         padding: 12px 30px; 
         box-shadow: 0px 8px 6px -6px rgba(0,0,0,.125);   
         background-color: transparent;  
-        transition: 0.3s;
-
-        /*position: relative;
-        background-image: linear-gradient(getColor(row-names-fg), getColor(row-names-fg));
-        background-position: 50% 50%;
-        background-repeat: no-repeat;
-        background-size: 0% 100%;
-        transition: background-size .4s, color .4s;*/    
+        transition: 0.3s;   
 
         &:hover {
             background-color: getColor(row-names-fg);
@@ -35,8 +28,7 @@ header#header__landing-header {
 
         &:hover {                 
             border-bottom: 1px solid rgba(0, 0, 0, .6);
-        }
-                        
+        }                     
     }
     
     nav.header__nav {           
@@ -295,7 +287,6 @@ header#header__landing-header {
                 line-height: 0px;
                 transition: transform ease-out 115ms;
                 transform: scale(0);   
-                  
             }
 
             &:hover::after{
@@ -365,7 +356,6 @@ header#header__landing-header {
     z-index: 2;
 
     .hl-about__row {
-        /*width: 60%; */
         max-width: 1000px;
         margin: 60px 100px;
         text-align: center;
@@ -387,6 +377,7 @@ header#header__landing-header {
             opacity: 0;
 
             &.hl-about__col--animation {
+                /* Animate each of the tiles */
                 &:nth-child(1) {
                     @include fadeX__loader(about-animation__first, 200px, $fadeUpSpeed);
                 }
